发布列表页form样式

--- a/src/features/deploys/MainDeployList.css
+++ b/src/features/deploys/MainDeployList.css
@@ -3,3 +3,11 @@
     white-space: nowrap;
     margin-bottom: 24px;
 }
+
+.main-deploy-list-add-button {
+    margin-bottom: 16px;
+}
+
+.main-deploy-list-search {
+    margin-bottom: 16px;
+}
