--- a/src/features/common/HomeLayout.css
+++ b/src/features/common/HomeLayout.css
@@ -15,3 +15,12 @@
     background: rgba(255, 255, 255, .2);
     margin: 16px;
 }
+
+.hl-content {
+    margin-top: 14px;
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-bottom: 16px;
+    padding: 24px;
+    background: #fff;
+}
