--- a/src/features/deploys/MainDeployDetailCard.css
+++ b/src/features/deploys/MainDeployDetailCard.css
@@ -27,6 +27,13 @@
     flex-grow: 2;
 }
 
+.mddc-header-extra-title {}
+
+.mddc-header-extra-text {
+    font-size: 20px;
+    color: black;
+}
+
 .mddc-header-desc-extra-content {
     flex-grow: 1;
 }
